updated French translation

--- a/po/wesnoth-aoi/fr.po
+++ b/po/wesnoth-aoi/fr.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2009-12-09 16:58+0100\n"
-"Last-Translator: David Pradier\n"
+"PO-Revision-Date: 2011-12-14 21:55+0100\n"
+"Last-Translator: Gérard Bodin <bodin.gnork@gmail.com>\n"
 "Language-Team: Équipe de traduction française <wesnoth@ml.free.fr>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -86,7 +86,7 @@ msgstr "Améliorations de l'histoire et du jeu après la v1.4"
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:53
 msgid "Artwork and Graphics Design"
-msgstr ""
+msgstr "Illustrations et graphismes"
 
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:60
@@ -350,7 +350,6 @@ msgstr "Monseigneur !"
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:216
-#, fuzzy
 msgid "Take... command... Drive them... away."
 msgstr "Prends... les rênes... Repousse-les... très loin."
 
@@ -365,7 +364,6 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:232
-#, fuzzy
 msgid ""
 "I’ve been bested, but the combat wasn’t fair... A thousand curses on you, "
 "withered coward! May you suffer... and when my master, Rualsha, finds you "
@@ -459,21 +457,17 @@ msgstr ""
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:138
-#, fuzzy
 msgid "When the fighting ends, I’ll have some answers. But for now—"
 msgstr "J'aurai quelques réponses à la fin du combat. Mais pour l'instant..."
 
 #. [message]: id=Gharlsa
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:142
-#, fuzzy
 msgid "Gharlsa sees elves... yes... Fresh meat for wolves. Yes, yes..."
 msgstr ""
-"Gharlsa aperçoit les elfes... Oui... Viande fraîche pour les loups. Oui, "
-"oui..."
+"Gharlsa voit des elfes... Oui... Viande fraîche pour les loups. Oui, oui..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:146
-#, fuzzy
 msgid "— let’s focus on the task at hand."
 msgstr "... concentrons-nous sur notre tâche immédiate."
 
@@ -491,29 +485,25 @@ msgstr ""
 
 #. [message]: id=Gharlsa
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:165
-#, fuzzy
 msgid "Yes... yes... Slay them!"
 msgstr "Oui... Oui... Massacrez-les !"
 
 #. [message]: speaker=unit
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:176
-#, fuzzy
 msgid "Hurts... failed... Rualsha gonna be angry..."
-msgstr "Douloureux... raté... Rualsha sera colère..."
+msgstr "Douloureux... raté... Rualsha sera en colère..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:187
-#, fuzzy
 msgid ""
 "This... ‘Rualsha’ again. We need to forge ahead; the answers we seek are not "
 "here. Perhaps we will find them further north."
 msgstr ""
-"Encore ce... Rualsha. Nous devons continuer ; les réponses recherchées ne se "
-"trouvent pas ici, mais peut-être encore plus au nord."
+"Encore ce... Rualsha. Nous devons continuer ; les réponses à nos questions "
+"ne se trouvent pas ici, mais peut-être plus au nord encore."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:191
-#, fuzzy
 msgid ""
 "Destroy this place and let the forest take the ruins. We don’t want any more "
 "undesirables to use it."
@@ -560,7 +550,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:68
-#, fuzzy
 msgid ""
 "Erlornas was near-certain they would find orcs there. No clan of dwarves "
 "would break their ancient treaties with the elves in this way; humans were "
@@ -652,13 +641,11 @@ msgstr ""
 
 #. [message]: id=Gnargha
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:198
-#, fuzzy
 msgid "You won... elf... But it changes... nothing... (<i>cough</i>)"
 msgstr "Tu gagnes... l'elfe... Mais ça ne change... rien.... *tousse*"
 
 #. [message]: id=Gnargha
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:202
-#, fuzzy
 msgid ""
 "We found the way... Now... we will come in numbers... (<i>cough</i>) you "
 "can’t imagine..."
@@ -668,9 +655,8 @@ msgstr ""
 
 #. [message]: id=Gnargha
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:206
-#, fuzzy
 msgid "(<i>Cough</i>) I’ll be waiting... among the dead..."
-msgstr "*tousse* J'attendrai... Parmi les morts..."
+msgstr "*Tousse* J'attendrai... parmi les morts..."
 
 #. [message]: speaker=narrator
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:217
@@ -1164,7 +1150,6 @@ msgstr "Au rapport."
 
 #. [message]: role=Advisor
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:154
-#, fuzzy
 msgid ""
 "A warband of orcs, no women or children among them, besieges a tower. It’s "
 "of human design... but we are far from the lands granted to humans by "
@@ -1221,7 +1206,6 @@ msgstr ""
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:178
-#, fuzzy
 msgid ""
 "Interesting... Go to my personal stores and bring me a bottle of wine. And a "
 "couple of glasses."
@@ -1231,7 +1215,6 @@ msgstr ""
 
 #. [message]: role=Advisor
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:182
-#, fuzzy
 msgid "... Glasses?"
 msgstr "... des verres ?"
 
@@ -1272,7 +1255,6 @@ msgstr "Peu de temps après..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:240
-#, fuzzy
 msgid ""
 "So you decided to accept the invitation. Good. Welcome, I am lord Erlornas "
 "of Wesmere. I find your presence here... surprising."
@@ -1330,11 +1312,10 @@ msgstr ""
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:288
 #: data/campaigns/An_Orcish_Incursion/scenarios/06_A_Detour_through_the_Swamp.cfg:128
 msgid "Alas, Erlornas, I have failed us..."
-msgstr ""
+msgstr "Hélas, Erlornas, j'ai failli..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:306
-#, fuzzy
 msgid ""
 "And that is well ended. But, Linaera, there is somewhat else that concerns "
 "me. You are a mage; do you not feel something... wrong... to the east of "
@@ -1461,7 +1442,6 @@ msgstr "Vaincre Rualsha"
 
 #. [message]: speaker=Lomarfel
 #: data/campaigns/An_Orcish_Incursion/scenarios/07_Showdown.cfg:222
-#, fuzzy
 msgid ""
 "My lord! We have ridden hard for over a week to catch up with you! The "
 "Ka’lian has deliberated, and asks you to defeat Rualsha quickly before he "
