--- a/po/wesnoth-units/fr.po
+++ b/po/wesnoth-units/fr.po
@@ -4,37 +4,27 @@
 # Traduction anglaise du package Battle for Wesnoth.
 # Copyright (C) 2004 THE Battle for Wesnoth'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the Battle for Wesnoth package.
-#
 # French Wesnoth translation team <wesnoth@ml.free.fr>, 2004.
-#
+# Guillaume Pascal <guillaume.pascal43@laposte.net>, 2011.
 msgid ""
 msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-12-15 10:39+0100\n"
-"PO-Revision-Date: 2010-08-15 13:49+0100\n"
-"Last-Translator: Gérard Bodin <gnork@orange.fr>\n"
+"PO-Revision-Date: 2011-12-16 11:40+0200\n"
+"Last-Translator: Guillaume Pascal <guillaume.pascal43@laposte.net>\n"
 "Language-Team: Équipe de traduction française <wesnoth@ml.free.fr>\n"
-"Language: \n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n > 1)\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Generator: Virtaal 0.7.0\n"
 
 #. [unit_type]: id=Dwarvish Dragonguard, race=dwarf
 #. [unit_type]: id=Dwarvish Masked Dragonguard, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Dragonguard.cfg:18
 #: data/core/units/dwarves/Dragonguard.cfg:20
-#, fuzzy
-#| msgid ""
-#| "It is not clear why the Dragonguards are called what they are, a name "
-#| "given by their dwarven brethren. Some speculate that the name comes from "
-#| "their weapon of choice, these strange staffs that belch fire and death. "
-#| "Others have surmised that it is because such weapons would be a threat "
-#| "against even a true Dragon, should such a thing be seen again in the "
-#| "known world. Whatever the case, it is for these weapons that the "
-#| "guardians of the great Dwarven citadels are both renowned and feared; "
-#| "weapons that have broken the mightiest of warriors with a single blow."
 msgid ""
 "It is not clear why the Dragonguards are called what they are, a name given "
 "by their dwarven brethren. Some speculate that the name comes from their "
@@ -268,19 +258,6 @@ msgstr "bâton de tonnerre"
 #. [unit_type]: id=Dwarvish Masked Thunderguard, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Thunderguard.cfg:21
 #: data/core/units/dwarves/Thunderguard.cfg:21
-#, fuzzy
-#| msgid ""
-#| "The Dwarven Thunderguards are famed for their curious weaponry, these "
-#| "strange staffs of wood and iron that make a thunderous noise in their "
-#| "anger. The machinations behind this weaponry are a mystery, a secret "
-#| "taken to the grave by the dwarves of Knalga who wield them, and are "
-#| "assumed to have even forged them. The most that is known are reports of "
-#| "dwarves pouring a strange black dust into the mouth of their weapons, "
-#| "which some say is a food to fuel the beast imprisoned within.\n"
-#| "\n"
-#| "Though a single shot from these ‘thundersticks’ can take several minutes "
-#| "to prepare, the results are seen by the Dwarves as being well worth the "
-#| "wait."
 msgid ""
 "The Dwarven Thunderguards are famed for their curious weaponry, these "
 "strange staves of wood and iron that make a thunderous noise in their anger. "
@@ -295,15 +272,14 @@ msgid ""
 msgstr ""
 "Les gardes foudroyeurs nains sont renommés pour leur curieux armement, ces "
 "étranges bâtons de bois et de fer qui font un bruit de tonnerre dans leur "
-"furie. Le mécanisme de cet arme est un mystère, gardé jusqu'à la tombe par "
-"les nains de Knalga qui les manient et sont supposés les avoir forgés. Le "
-"peu qu'on en sait provient de témoignages de nains versant une étrange "
+"furie. Le mécanisme de ces armes est un mystère, gardé jusqu'à la tombe par "
+"les nains de Knalga qui les manient et qui sont supposés les avoir forgées. "
+"Le peu qu'on en sait provient de témoignages de nains versant une étrange "
 "poudre noire dans la gueule de leurs armes, dont certains disent qu'il "
 "s'agit de nourriture pour la bête emprisonnée à l'intérieur.\n"
 "\n"
-"Même si un seul coup de ces « bâtons de tonnerre » peut nécessiter plusieurs "
-"minutes de préparation, pour les nains les résultats valent le « coup » "
-"d'attendre."
+"Même si un seul tir de ces « bâtons de tonnerre » peut nécessiter plusieurs "
+"minutes de préparation, pour les nains le résultat vaut le coup d'attendre."
 
 #. [unit_type]: id=Dwarvish Runemaster, race=dwarf
 #. [unit_type]: id=Dwarvish Rune Lord, race=dwarf
@@ -328,6 +304,12 @@ msgid ""
 "their runes cause the physical blows of their enemies to deal less damage "
 "than would be expected."
 msgstr ""
+"À moins d'être doué d'un talent presque surnaturel, le plus haut rang auquel "
+"peut prétendre un fabricant de runes est celui de maître des runes nain. "
+"Leurs coups étant presque aussi puissants que ceux des meilleurs guerriers, "
+"ils seraient déjà redoutables sans leur savoir ; avec, ils sont presque "
+"invincibles, puisque leurs runes réduisent les dégâts infligés par les coups "
+"physiques de leurs ennemis."
 
 #. [attack]: type=cold
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Rune_Lord.cfg:44
@@ -736,7 +718,6 @@ msgstr "Dracan cœur-de-flamme"
 
 #. [unit_type]: id=Drake Flameheart, race=drake
 #: data/core/units/drakes/Flameheart.cfg:26
-#, fuzzy
 msgid ""
 "Flamehearts lack the strength to defeat other high-ranking drakes in single "
 "combat, but prefer in any case to avoid confrontation within the tribe. "
@@ -959,9 +940,8 @@ msgstr ""
 
 #. [unit_type]: id=Dwarvish Arcanister, race=dwarf
 #: data/core/units/dwarves/Arcanister.cfg:4
-#, fuzzy
 msgid "Dwarvish Arcanister"
-msgstr "Combattant nain"
+msgstr "Occultiste nain"
 
 #. [unit_type]: id=Dwarvish Arcanister, race=dwarf
 #: data/core/units/dwarves/Arcanister.cfg:31
@@ -971,6 +951,11 @@ msgid ""
 "that is his intent. His skill in runecrafting is unrivaled, and the glyphs "
 "he carves into his weapons and armor deflect the blows of his enemies."
 msgstr ""
+"Le plus puissant de tous les créateurs de runes, l'occultiste nain peut "
+"détruire presque instantanément tout ennemi blessé, et manque rarement de "
+"causer une blessure quand c'est son intention. Son talent pour la création "
+"de runes est sans pareil : les glyphes qu'il grave sur ses armes et son "
+"armure dévient les coups ennemis."
 
 #. [unit_type]: id=Dwarvish Berserker, race=dwarf
 #: data/core/units/dwarves/Berserker.cfg:4
@@ -1059,7 +1044,6 @@ msgstr "Pisteur nain"
 
 #. [unit_type]: id=Dwarvish Pathfinder, race=dwarf
 #: data/core/units/dwarves/Pathfinder.cfg:23
-#, fuzzy
 msgid ""
 "These hardy dwarves are sometimes away from their caves for long periods, "
 "scouting and patrolling the borders. They spend this time watching for "
@@ -1067,18 +1051,17 @@ msgid ""
 "territory. They are powerful fighters in a melee, and from a distance their "
 "deftly thrown axes can rival the power and accuracy of a human archer."
 msgstr ""
-"Ces nains intrépides sont régulièrement loin de leurs grottes pour de "
-"longues périodes, reconnaissant et patrouillant aux frontières. Ils passent "
+"Ces nains intrépides sont souvent loin de leurs grottes pour de longues "
+"périodes, en reconnaissance ou en patrouille aux frontières. Ils passent "
 "leur temps à guetter d'éventuels envahisseurs, et à combattre les bandits et "
 "les voleurs qui empiètent sur les territoires nains. Ce sont de puissants "
-"guerriers au corps à corps, et à distance leurs haches lancées adroitement "
+"guerriers au corps à corps, et à distance leurs haches adroitement lancées "
 "peuvent faire jeu égal avec la puissance et la précision d'un archer humain."
 
 #. [unit_type]: id=Dwarvish Runesmith, race=dwarf
 #: data/core/units/dwarves/Runesmith.cfg:4
-#, fuzzy
 msgid "Dwarvish Runesmith"
-msgstr "Maître des runes nain"
+msgstr "Forgerune nain"
 
 #. [unit_type]: id=Dwarvish Runesmith, race=dwarf
 #: data/core/units/dwarves/Runesmith.cfg:29
@@ -1088,6 +1071,11 @@ msgid ""
 "and accuracy, and disrupt the blows of their enemies, causing them to strike "
 "softly, weakly and on the armor of the defender."
 msgstr ""
+"Les forgerune nains, une fois qu'ils maîtrisent leur art, gravent des runes "
+"d'arcane sur leurs armes et leur armure. Ces runes donnent du pouvoir et de "
+"la précision aux coups portés par le forgerune, et freinent ceux de ses "
+"ennemis, les rendant ainsi plus doux et plus faibles au contact de son "
+"armure."
 
 #. [unit_type]: id=Dwarvish Scout, race=dwarf
 #: data/core/units/dwarves/Scout.cfg:4
@@ -1504,7 +1492,6 @@ msgstr "Tireur d'élite elfe"
 
 #. [unit_type]: id=Elvish Marksman, race=elf
 #: data/core/units/elves/Marksman.cfg:19
-#, fuzzy
 msgid ""
 "Elves are wonderously keen-sighted, a gift which contributes to their "
 "mastery of the bow. An elf practiced at archery can hit targets that a man "
@@ -1706,7 +1693,6 @@ msgstr "Nymphe elfe"
 
 #. [unit_type]: id=Elvish Shyde, race=elf
 #: data/core/units/elves/Shyde.cfg:22
-#, fuzzy
 msgid ""
 "Devotion to the path of faerie may eventually transform an elf maiden into a "
 "creature of both worlds. Guided by a power which is little understood, these "
@@ -2882,7 +2868,7 @@ msgid ""
 "Though they are not warriors, by any means, the application of their art to "
 "combat is something that often causes other soldiers to stand aside in awe."
 msgstr ""
-"Tout prétendant au titre de Grand mage est déjà presque une légende de son "
+"Tout prétendant au titre de grand mage est déjà presque une légende de son "
 "vivant ; les baladins des grandes villes ont rapidement appris que cette "
 "distinction ne devait pas être prise à la légère. Une candidature n'est "
 "proposée à un conseil d'importants mages anciens qu'après un examen "
@@ -3460,7 +3446,6 @@ msgstr "Rôdeur"
 
 #. [unit_type]: id=Ranger, race=human
 #: data/core/units/humans/Woodsman_Ranger.cfg:22
-#, fuzzy
 msgid ""
 "Rangers are wild men and wanderers, who have chosen to shun the company of "
 "their fellow men for myriad reasons. They have spent the better part of "
@@ -3476,13 +3461,13 @@ msgid ""
 msgstr ""
 "Les rôdeurs sont des hommes sauvages et vagabonds qui ont choisi d'éviter "
 "leurs semblables pour quantité de raisons. Ils ont passé une grande partie "
-"de leur vie en pleine nature et en connaissent les nombreux secrets. "
+"de leur vie en pleine nature et connaissent nombre de ses secrets. "
 "Excellents pisteurs et explorateurs, ils peuvent découvrir de la nourriture "
 "et des abris là où d'autres ne verraient que des branchages ou des rochers.\n"
 "\n"
 "Ces hommes dérangent les dirigeants les plus autoritaires, car ils forment "
-"un élément incontrôlable par les chevaliers et les troupes stationnées. Ce "
-"sont des hommes aux motivations incertaines et ce sont les premiers à "
+"un élément incontrôlable pour les chevaliers et autres troupes régulières. "
+"Ce sont des hommes aux motivations incertaines et ce sont les premiers à "
 "railler un traité royal, à supposer même qu'ils en entendent parler. Ils "
 "peuvent être embauchés comme mercenaires, et on les retrouve ainsi aussi "
 "bien au côté de bandits qu'au service du roi."
@@ -3897,9 +3882,8 @@ msgstr "queue"
 
 #. [unit_type]: id=Fire Guardian, race=monster
 #: data/core/units/monsters/Fire_Guardian.cfg:4
-#, fuzzy
 msgid "Fire Guardian"
-msgstr "Dragon de feu"
+msgstr "Esprit du feu"
 
 #. [unit_type]: id=Fire Guardian, race=monster
 #: data/core/units/monsters/Fire_Guardian.cfg:28
@@ -3909,12 +3893,16 @@ msgid ""
 "their bidding. When not being controlled they like to frolic in pools of "
 "lava and take great delight in burning anything they can reach."
 msgstr ""
+"Les esprits du feu sont faits de flammes et de fumée. Personne ne sait "
+"exactement d'où ils viennent, mais ils peuvent être invoqués et commandés "
+"par des mages puissants. Quand ils sont libres, ils aiment batifoler dans "
+"des mares de lave et prennent un grand plaisir à brûler tout ce qui se "
+"trouve à leur portée."
 
 #. [attack]: type=fire
 #: data/core/units/monsters/Fire_Guardian.cfg:31
-#, fuzzy
 msgid "fire claws"
-msgstr "griffes"
+msgstr "griffes de feu"
 
 #. [unit_type]: id=Giant Mudcrawler, race=monster
 #: data/core/units/monsters/Giant_Mudcrawler.cfg:4
@@ -3951,7 +3939,7 @@ msgstr "boule de boue"
 #. [unit_type]: id=Giant Rat, race=monster
 #: data/core/units/monsters/Giant_Rat.cfg:4
 msgid "Giant Rat"
-msgstr ""
+msgstr "Rat géant"
 
 #. [unit_type]: id=Giant Rat, race=monster
 #: data/core/units/monsters/Giant_Rat.cfg:18
@@ -3959,6 +3947,9 @@ msgid ""
 "Given an adequate supply of food, some rats can grow to truly impressive "
 "sizes. They can also grow quite aggressive."
 msgstr ""
+"S'ils ont accès à une réserve de nourriture conséquente, certains rats "
+"peuvent grandir jusqu'à des tailles vraiment impressionnantes. Ils peuvent "
+"également devenir relativement agressifs."
 
 #. [unit_type]: id=Giant Scorpion, race=monster
 #: data/core/units/monsters/Giant_Scorpion.cfg:4
@@ -4111,19 +4102,16 @@ msgstr ""
 "isolé est plutôt faible, une meute est capable de tuer en quelques minutes "
 "le plus fort des hommes."
 
+# Attention : "Direwolf" tout court, pas "Direwolf Rider" !
 #. [unit_type]: id=Direwolf, race=wolf
 #: data/core/units/monsters/Wolf_Dire.cfg:4
-#, fuzzy
-#| msgid "Direwolf Rider"
 msgid "Direwolf"
-msgstr "Monteur de loup noir"
+msgstr "Loup noir"
 
 #. [unit_type]: id=Great Wolf, race=wolf
 #: data/core/units/monsters/Wolf_Great.cfg:4
-#, fuzzy
-#| msgid "Great Troll"
 msgid "Great Wolf"
-msgstr "Grand troll"
+msgstr "Grand loup"
 
 #. [unit_type]: id=Yeti, race=monster
 #: data/core/units/monsters/Yeti.cfg:4
@@ -4181,11 +4169,12 @@ msgid ""
 "are they potent enemies on any open terrain, but their ability to swim "
 "allows them deadly mobility in water."
 msgstr ""
-"Les plus expérimentées des sabreurs nagas se lancent dans la caste des "
+"Les plus expérimentés des sabreurs nagas se lancent dans la caste des "
 "mirmillons, maîtres des sabres doubles. Ils frappent aussi prestement que "
 "les serpents auxquels ils ressemblent et esquivent gracieusement les "
 "attaques, comme en dansant. Ils constituent des adversaires puissants sur "
-"terrain ouvert et leur aptitude à nager leur confère une mobilité mortelle."
+"terrain ouvert et leur aptitude à nager leur confère une mobilité mortelle "
+"dans l'eau."
 
 #. [female]
 #: data/core/units/nagas/Myrmidon.cfg:94
@@ -4194,13 +4183,6 @@ msgstr "Mirmillonne naga"
 
 #. [female]
 #: data/core/units/nagas/Myrmidon.cfg:96
-#, fuzzy
-#| msgid ""
-#| "The most practiced of the nagani blademasters are initiated into the "
-#| "caste of the Myrmidon, masters of their twin-bladed art. They strike as "
-#| "fast as the snakes which they resemble, and dance away from attacks with "
-#| "grace. Not only are they potent enemies on any open terrain, but their "
-#| "ability to swim allows them a deadly mobility."
 msgid ""
 "The most practiced of the nagini blademasters are initiated into the caste "
 "of the Myrmidon, masters of their twin-bladed art. They strike as fast as "
@@ -4212,7 +4194,8 @@ msgstr ""
 "mirmillons, maîtres des sabres doubles. Elles frappent aussi prestement que "
 "les serpents auxquels elles ressemblent et esquivent gracieusement les "
 "attaques, comme en dansant. Elles constituent des adversaires puissantes sur "
-"terrain ouvert et leur aptitude à nager leur confère une mobilité mortelle."
+"terrain ouvert et leur aptitude à nager leur confère une mobilité mortelle "
+"dans l'eau."
 
 #. [unit_type]: id=Naga Warrior, race=naga
 #: data/core/units/nagas/Warrior.cfg:4
@@ -4243,14 +4226,6 @@ msgstr "Guerrière naga"
 
 #. [female]
 #: data/core/units/nagas/Warrior.cfg:93
-#, fuzzy
-#| msgid ""
-#| "Many of the young warriors of the nagani aspire for the day when they "
-#| "merit their second blade. Their martial practice of using twin blades is "
-#| "wholly unlike that of the Orcs and other races, for they have begun to "
-#| "learn the art of using their serpentine form to best effect, twisting and "
-#| "turning to dodge from blows. This makes them potent on land, but the "
-#| "friction of water greatly impedes their ability to do this."
 msgid ""
 "Many of the young warriors of the nagini aspire for the day when they merit "
 "their second blade. Their martial practice of using twin blades is wholly "
@@ -4394,7 +4369,6 @@ msgstr "Meneur orc"
 
 #. [unit_type]: id=Orcish Leader, race=orc
 #: data/core/units/orcs/Leader.cfg:20
-#, fuzzy
 msgid ""
 "Unusually cunning orcs tend to find themselves as the leaders of warrior "
 "bands. They carry a crossbow out of necessity, but are much more skilled "
@@ -4415,7 +4389,6 @@ msgstr "Seigneur orc"
 
 #. [unit_type]: id=Orcish Ruler, race=orc
 #: data/core/units/orcs/Ruler.cfg:19
-#, fuzzy
 msgid ""
 "Any orc who can keep a large tribe from feuding and in-fighting is often "
 "unusually intelligent and commanding, and is inevitably very strong as well. "
@@ -4822,7 +4795,7 @@ msgstr ""
 #. [unit_type]: id=Ghast, race=undead
 #: data/core/units/undead/Corpse_Ghast.cfg:4
 msgid "Ghast"
-msgstr ""
+msgstr "Abomination"
 
 #. [unit_type]: id=Ghast, race=undead
 #: data/core/units/undead/Corpse_Ghast.cfg:20
@@ -4834,6 +4807,13 @@ msgid ""
 "flesh straight from their foes. Once their enemy is defeated, they eat the "
 "rest of the body, gaining strength in the process."
 msgstr ""
+"L'abomination est une créature issue des cauchemars les plus primaires de "
+"l'humanité. Contrairement à ses petits cousins, les goules et les "
+"nécrophages, les abominations ne sont pas assez patientes pour attendre que "
+"leur victime meure du poison avant de consommer leur corps. Elles attaquent "
+"directement avec leurs énormes bouches, en essayant d'arracher directement "
+"la chair de leurs ennemis. Une fois ceux-ci vaincus, elles mangent le reste "
+"du corps, ce qui leur donne de la force supplémentaire."
 
 #. [unit_type]: id=Ghoul, race=undead
 #: data/core/units/undead/Corpse_Ghoul.cfg:4
@@ -5252,7 +5232,6 @@ msgstr "Revenant"
 
 #. [unit_type]: id=Revenant, race=undead
 #: data/core/units/undead/Skele_Revenant.cfg:19
-#, fuzzy
 msgid ""
 "Given false life to do battle once more, the creatures known as Revenants "
 "were clearly great warriors in their time, though the memory of that time is "
@@ -5261,10 +5240,10 @@ msgid ""
 "powerful tool in combat: a fearless warrior that feels no pain and will "
 "fight to the bitter end."
 msgstr ""
-"Rappelés à une fausse vie pour combattre à nouveau, les créatures connues "
+"Rappelées à une fausse vie pour combattre à nouveau, les créatures connues "
 "sous le nom de revenants ont certainement été de grands guerriers à leur "
-"époque, bien que tout souvenir de ce temps se soit effacé depuis longtemps. "
-"Même les sorciers qui les ont rappelés ne peuvent que faire des suppositions "
+"époque, bien que tout souvenir de ce temps ait été perdu depuis longtemps. "
+"Même les sorciers qui les ont rappelés ne peuvent faire que des suppositions "
 "sur leur passé. Mises à part ces questions, un revenant est un outil "
 "puissant au combat : un guerrier sans peur qui ne sent pas la douleur et qui "
 "se battra jusqu'à la fin."
@@ -5516,13 +5495,9 @@ msgstr ""
 "Les woses sont complètement pacifiques, mais possèdent une grande force. Ils "
 "ne sont, malgré tout, ni rapides, ni prompts à se déplacer."
 
-#, fuzzy
-#~| msgid "longsword"
 #~ msgid "long sword"
 #~ msgstr "épée longue"
 
-#, fuzzy
-#~| msgid "Elder Mage"
 #~ msgid "Elder Falcon"
 #~ msgstr "Mage émérite"
 
