--- a/po/wesnoth-tutorial/fr.po
+++ b/po/wesnoth-tutorial/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.1-svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-12-15 10:39+0100\n"
-"PO-Revision-Date: 2011-11-27 20:55+0200\n"
+"PO-Revision-Date: 2011-12-15 12:47+0200\n"
 "Last-Translator: Guillaume Pascal <guillaume.pascal43@laposte.net>\n"
 "Language-Team: Équipe de traduction française <wesnoth@ml.free.fr>\n"
 "Language: fr\n"
@@ -306,33 +306,23 @@ msgstr "Couronnes"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:458
-#, fuzzy
-#| msgid ""
-#| "Note: The tiny metal crown above Delfador means you will lose the game if "
-#| "he is killed. You will also lose the game if your leader (Konrad) is "
-#| "killed."
 msgid ""
 "The tiny metal crown above Delfador means you will lose the game if he is "
 "killed. You will also lose the game if your leader (Konrad) is killed."
 msgstr ""
-"Remarque : La petite couronne de métal au-dessus de Delfador indique que "
-"vous perdriez la partie s'il venait à mourir. Vous perdriez aussi si votre "
-"chef (Konrad) était tué."
+"La petite couronne de métal au-dessus de Delfador indique que vous perdriez "
+"la partie s'il venait à mourir. Vous perdriez aussi si votre chef (Konrad) "
+"était tué."
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:462
-#, fuzzy
-#| msgid ""
-#| "Note: The tiny metal crown above Delfador means you will lose the game if "
-#| "he is killed. You will also lose the game if your leader (Li’sar) is "
-#| "killed."
 msgid ""
 "The tiny metal crown above Delfador means you will lose the game if he is "
 "killed. You will also lose the game if your leader (Li’sar) is killed."
 msgstr ""
-"Remarque : La petite couronne de métal au-dessus de Delfador indique que "
-"vous perdriez la partie s'il venait à mourir. Vous perdriez aussi si votre "
-"chef (Li'sar) était tué."
+"La petite couronne de métal au-dessus de Delfador indique que vous perdriez "
+"la partie s'il venait à mourir. Vous perdriez aussi si votre chef (Li'sar) "
+"était tué."
 
 #. [message]: id=Delfador
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:474
